[gd_scene load_steps=2 format=3 uid="uid://bq5sxyd0w2vrk"]

[ext_resource type="Script" path="res://Menu2.gd" id="1_or1le"]

[node name="Menu2" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_or1le")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.031
offset_top = -8.0
offset_right = 1144.0
offset_bottom = 627.912
color = Color(0.0901961, 0.105882, 0.301961, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 955.0
offset_bottom = 542.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "         Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Label"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 416.0
offset_top = 296.0
offset_right = -283.0
offset_bottom = 510.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer/Label/VBoxContainer"]
layout_mode = 2
text = "START"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer/Label/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/Label/VBoxContainer"]
layout_mode = 2
text = "BACK"

[node name="options" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="options"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="Button" parent="options/VBoxContainer"]
layout_mode = 2
text = "Video"

[node name="Audio" type="Button" parent="options/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="back" type="Button" parent="options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[node name="videoControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="videoControl"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -43.0
offset_right = 55.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="videoControl/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="Label" parent="videoControl/HBoxContainer/Labels"]
layout_mode = 2
text = "FullScreen"

[node name="Borderless" type="Label" parent="videoControl/HBoxContainer/Labels"]
layout_mode = 2
text = "Borderless"

[node name="VSync" type="Label" parent="videoControl/HBoxContainer/Labels"]
layout_mode = 2
text = "VSync"

[node name="Checks" type="VBoxContainer" parent="videoControl/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="CheckBox" parent="videoControl/HBoxContainer/Checks"]
layout_mode = 2

[node name="Borderless" type="CheckBox" parent="videoControl/HBoxContainer/Checks"]
layout_mode = 2

[node name="VSync" type="CheckBox" parent="videoControl/HBoxContainer/Checks"]
layout_mode = 2

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -44.0
offset_right = 104.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
text = "Music"

[node name="Sound FX" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
text = "Sound FX"

[node name="Slider" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2

[node name="Sound FX" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2

[node name="backFromAudio" type="Button" parent="Audio"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Label/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Label/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Label/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Label/VBoxContainer/Back" to="." method="_on_quit_pressed"]
